--- a/src/templates/partials/base.njk
+++ b/src/templates/partials/base.njk
@@ -6,11 +6,13 @@
     {% block meta %}{% endblock %}
     {% block extra_css %}{% endblock %}
     <link rel="stylesheet" href="css/{{ projectFilesName }}.libs.css">
+    <link rel='stylesheet' href='https://cdn.rawgit.com/jonsuh/hamburgers/e8cd462c/dist/hamburgers.css'>
     <link rel="stylesheet" href="css/main.css">
+
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>{% if section != 'index' %}{% block title %}{% endblock %} - {% endif %}{{ projectName }}</title>
   </head>
-  <body>
+  <body id="body">
     <div id="page">
       {% include 'partials/navbar.njk' %}
       <main>
@@ -25,6 +27,42 @@
     {% endblock %}
     <script src="js/{{ projectFilesName }}.js"></script>
     {% block js_inline %}
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript">
+      $(".products-slider").slick({
+        infinite: true,
+        centerMode: true,
+        nextArrow: '<img class="product-next cursor-pointer" src="./img/icons/group-3-copy-2@3x.png"></img>',
+        prevArrow: '<img class="product-prev cursor-pointer" src="./img/icons/group-3-copy-4@3x.png"></img>',
+        centerPadding: '0px',
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        responsive: [
+                      {
+                        breakpoint: 800,
+                        settings: {
+                          slidesToShow: 2,
+                          slidesToScroll: 2
+                        }
+                      },
+                      {
+                        breakpoint: 767,
+                        settings: {
+                          slidesToShow: 1,
+                          slidesToScroll: 1
+                        }
+                      }
+                    ]
+      });
+      $('.fade').slick({
+        infinite: true,
+        autoplay: true,
+        autoplaySpeed: 6000,
+        nextArrow: '<img class="header-next cursor-pointer" src="./img/icons/group-3-copy-2@3x.png"></img>',
+        prevArrow: '<img class="header-prev cursor-pointer" src="./img/icons/group-3-copy-4@3x.png"></img>',
+      });
+    </script>
     {% endblock %}
   </body>
 </html>
