#2 Landing page template

--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -4,4 +4,214 @@
 {% endblock %}
 
 {% block content %}
+  <div id="imageModal" class="modal">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content-offices">
+        <div class="modal-close-btn-container-offices cursor-pointer" id="imageClose">
+          <span class="close"><img src="./img/icons/close-modal.png" class="close-modal-img"></span>
+        </div>
+        <div class="modal-title-gallery neopraxis-flex-column">
+
+        </div>
+        <div class="modal-slider">
+          <div class="office-slider-item-modal"></div>
+          <div class="office-slider-item-modal"></div>
+          <div class="office-slider-item-modal"></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="fade">
+    <div class="aguaviento-header one">
+      <div class="oval-box">
+        <img src="./img/icons/oval-3-copy-2@3x.png" class="header-first-oval">
+        <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
+        <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
+        <div class="header-text-box one">
+          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Nuestros clientes</p>
+          <div class="header-text-divider"></div>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Tenemos siempre en la mira al usuario de nuestros productos. Conocemos sus expectativas y hacemos lo necesario para ofrecer el producto que requiere. A través de sus ojos, vemos un mundo más limpio, un mejor mundo.</p>
+        </div>
+      </div>
+    </div>
+    <div class="aguaviento-header two">
+      <div class="oval-box">
+        <img src="./img/icons/oval-3-copy-2@3x.png" class="header-first-oval">
+        <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
+        <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
+        <div class="header-text-box one">
+          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Compromiso</p>
+          <div class="header-text-divider"></div>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Ofrecemos soluciones integrales a las necesidades de nuestros actuales y futuros clientes. Su problema es nuestro desafío.</p>
+        </div>
+      </div>
+    </div>
+    <div class="aguaviento-header three">
+      <div class="oval-box">
+        <img src="./img/icons/oval-3-copy-2@3x.png" class="header-first-oval">
+        <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
+        <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
+        <div class="header-text-box one">
+          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Desempeño</p>
+          <div class="header-text-divider"></div>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Productos amigables con el medio. Fragancias vanguardistas. Formulaciones de alto rendimiento.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blue-filler-container aguaviento-flex-column">
+    <a href="#firstSection" class="click-scrolling">
+      <div class="arrow-blue-box aguaviento-flex-column cursor-pointer">
+      <img src="./img/icons/np-down-chevron-613789-ffffff@3x.png" class="arrow-blue-icon">
+    </div>
+    </a>
+    <div class="blue-filler-title-box">
+      <p class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Soluciones en productos de limpieza</p>
+    </div>
+    <div class="blue-filler-button-box aguaviento-flex-column cursor-pointer hover-light-blue">
+      <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">contacto</p>
+    </div>
+  </div>
+  <div class="first-section bottom aguaviento-flex-column" id="firstSection">
+    <div class="first-section-title-box">
+      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one first-section-title-text aguaviento-font-montserrat-medium">Grupo Aguaviento</p>
+      <img src="./img/icons/group-11@3x.png" class="first-section-title-icon">
+    </div>
+    <div class="first-section-content-box">
+      <p class="first-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brow-text text-center">Trabajamos en servicio de los hogares, especializada en el diseño, desarrollo, creación y fabricación de productos de limpieza. Orgullosamente mexicanos, reconocidos por su alto desempeño, calidad y precio.</p>
+    </div>
+    <div class="first-section-oval-box">
+      <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
+    </div>
+    <div class="first-section seafoam-divider"></div>
+    <div class="frist-section-row aguaviento-flex-row">
+      <div class="first-section-feature-box">
+        <div class="first-section-feature-title-box">
+          <p class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustentabilidad</p>
+        </div>
+        <div class="first-section-feature-image first"></div>
+        <a href="" class="aguaviento-link">
+          <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
+            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+          </div>
+        </a>
+      </div>
+      <div class="first-section-feature-box">
+        <div class="first-section-feature-title-box">
+          <p class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Nosotros</p>
+        </div>
+        <div class="first-section-feature-image second"></div>
+        <a href="" class="aguaviento-link">
+          <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
+            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="first-parallax-section">
+    <img src="./img/group-30@3x.png" class="parallax-section-circle-img">
+    <div class="first-parallax-section-title-box">
+      <p class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Productos vanguardistas de alto desempeño</p>
+      <div class="first-parallax-section-button-box aguaviento-flex-column hover-light-blue cursor-pointer">
+        <p class="first-parallax-section-button-text bluish-text no-margin-text uppercase aguaviento-font-montserrat-light letter-spacing-dot-six">conoce más</p>
+      </div>
+    </div>
+  </div>
+  <div class="second-section bottom aguaviento-flex-column">
+    <div class="second-section-title-box">
+      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one second-section-title-text aguaviento-font-montserrat-medium">Servicios</p>
+      <img src="./img/icons/group-11@3x.png" class="second-section-title-icon">
+    </div>
+    <div class="second-section-content-box">
+      <p class="second-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brow-text text-center">En nuestro centro de tecnología desarrollamos fórmulas de acuerdo a las necesidades de los clientes. Fabricamos productos vanguardistas de alto desempeño, así como f’órmulas económicas para distribución masiva.</p>
+    </div>
+    <div class="second-section-services-container aguaviento-flex-row">
+      <a href="#" id="imageBtn">
+        <div class="second-section-service-box first border aguaviento-flex-row">
+          <div class="service-info-box">
+            <p class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Desarrollo</p>
+            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">En nuestro centro de tecnología creamos formulas de acuerdo a los requerimientos de los clientes y consumidores. Propuestas económicas, vanguardistas o de calidades Premium: hacemos lo que el mercado pida. </p>
+          </div>
+          <img src="./img/icons/miscroscopio-06@3x.png" class="service-icon first">
+        </div>
+      </a>
+      <a href="#">
+        <div class="second-section-service-box aguaviento-flex-row">
+          <div class="service-info-box">
+            <p class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Maquila</p>
+            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">Nos preocupamos para que su marca sea la mejor. Contamos la experiencia, tecnología y profesionalismo para hacerlo.</p>
+          </div>
+          <img src="./img/icons/botella-07@3x.png" class="service-icon second">
+        </div>
+      </a>
+    </div>
+    <a href="" class="aguaviento-link">
+      <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
+        <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">ver más</p>
+      </div>
+    </a>
+  </div>
+  <div class="blue-parallax aguaviento-flex-column">
+    <div class="blue-parallax-overlay aguaviento-flex-column">
+      <div class="blue-parallax-title-box">
+        <p class="blue-paprallax-title-text no-margin-text white-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one text-center">Creemos en lo que hacemos, y sabemos como hacerlo.</p>
+      </div>
+    </div>
+  </div>
+  <div class="third-section-box aguaviento-flex-column">
+    <div class="third-section-title-box">
+      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one third-section-title-text aguaviento-font-montserrat-medium">Nuestros productos</p>
+      <img src="./img/icons/group-11@3x.png" class="third-section-title-icon">
+    </div>
+    <div class="nice-blue-divider third-section"></div>
+    <div class="third-section-oval-box">
+      <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
+    </div>
+    <div class="products-slider">
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-08@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Detergentes</p>
+        </div>
+      </a>
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-09@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Suavizantes</p>
+        </div>
+      </a>
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-10@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Limpiadores</p>
+        </div>
+      </a>
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+        </div>
+      </a>
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+        </div>
+      </a>
+      <a href="" class="cursor-pointer product-link">
+        <div class="product-item-box aguaviento-flex-column">
+          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
+          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+        </div>
+      </a>
+    </div>
+    <a href="" class="aguaviento-link">
+      <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
+        <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+      </div>
+    </a>
+  </div>
 {% endblock %}
