--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -1,16 +1,74 @@
-<nav class="site-navbar">
-  <div class="site-navbar__desktop-logo-container">
-    <a href="index.html"><img src="#" alt="Logo"></a> {# Change #}
-  </div>
-  <div class="site-navbar__menu-trigger">
-    <span class="fa fa-bars"></span>
-  </div>
-  <div class="site-navbar__menu-container">
-    <div class="site-navbar__mobile-logo-container">
-      <a href="index.html"><img src="#" alt="Logo"></a> {# Change #}
+<nav class="neopraxis-navbar" id="neopraxisNavbarSite">
+  <button class="hamburger hamburger--collapse" type="button" id="neopraxis-hamburger-menu">
+    <span class="hamburger-box">
+      <span class="hamburger-inner"></span>
+    </span>
+  </button>
+  <a class="navbar-brand" href="./">
+    <img src="./img/logo-aguaviento@3x.png" class="fitLogo" id="fit-logo">
+  </a>
+  <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar">
+      {% if section == 'index' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif%}
+        <a href="./" class="">Inicio</a>
+      </li>
+      {% if section == 'services' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif %}
+        <a href="./services.html" class="">Compañía</a>
+      </li>
+      {% if section == 'memberships' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif %}
+        <a href="./memberships.html" class="">Productos</a>
+      </li>
+      {% if section == 'offices' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif %}
+        <a href="./offices.html" class="">Innovación</a>
+      </li>
+      {% if section == 'tools' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif %}
+        <a href="./tools.html" class="">Instalaciones</a>
+      </li>
+      {% if section == 'blog' %}
+        <li class="aguaviento-font-montserrat-light active">
+      {% else %}
+        <li class="aguaviento-font-montserrat-light">
+      {% endif %}
+        <a href="./blog.html" class="">Contacto</a>
+      </li>
+  </ul>
+    <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar-right">
+      {% if section == 'login' %}
+        <li class="navbar-padding aguaviento-font-montserrat-light active right-item-nav">
+      {% else %}
+        <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
+      {% endif %}
+        <a href="./login.html" class="language-link active">ES</a>
+      </li>
+      <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
+        <a href="./login.html" class="language-link">/</a>
+      </li>
+      <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
+        <a href="./login.html" class="language-link">EN</a>
+      </li>
+    </ul>
+    <div hidden="" class="neopraxis-show-in-movil">
+      <a class="neopraxis-center-flex" href="./">
+        <img src="./img/logo-aguaviento@3x.png" class="neopraxis-logo-comparative">
+      </a>
     </div>
-    <div class="site-navbar__menu">
-      <a href="index.html" class="site-navbar__menu-link {% if section == 'index' %}active{% endif %}">Home</a>
-    </div>
-  </div>
 </nav>
