#4 add innovaation route to navbar

--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -34,7 +34,7 @@
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./offices.html" class="">Innovación</a>
+        <a href="./innovation.html" class="">Innovación</a>
       </li>
       {% if section == 'tools' %}
         <li class="aguaviento-font-montserrat-light active">
