--- a/src/styl/partials/navbar.styl
+++ b/src/styl/partials/navbar.styl
@@ -171,6 +171,17 @@ font-size remify(19) // Change
   z-index: 9999;
   border-bottom: solid 5px #63d5d0;
 }
+.aguaviento-navbar-innovation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  width:100%;
+  top:0;
+  background: #ffffff;
+  z-index: 9999;
+  border-bottom: solid 5px #bcdd46;
+}
 .navbar-right{
   padding-left: 0px;
 }
