#4 add parallax and title

--- a/src/templates/sections/innovation.njk
+++ b/src/templates/sections/innovation.njk
@@ -3,6 +3,10 @@
 {% block meta %}
 {% endblock %}
 
+{% block title %}
+  Innovación
+{% endblock %}
+
 {% block content %}
-  
+  <div class="innovation-parallax-container"></div>
 {% endblock %}
