--- a/src/styl/sections/innovation.styl
+++ b/src/styl/sections/innovation.styl
@@ -1,9 +1,80 @@
-.innovation-parallax-container
-  width 100vw
-  height 37vw
-  margin-top 87px
-  background url("../img/mountain-forest.jpg")
-  background-attachment fixed
-  background-repeat no-repeat
-  background-size cover
-  background-position center -20px
+.aguaviento-section-title
+  text-align center
+  margin 47px auto
+  position relative
+  .title
+    color #0d74b9
+    font-size 1.79em
+    margin 0
+    letter-spacing 1px
+  img
+    width 44px
+    height 44px
+    position absolute
+    top -10px
+    right 52px
+    z-index -1
+    
+.innovation
+/*Parallax*/
+  &-parallax-container
+    width 100vw
+    height 37vw
+    margin-top 87px
+    background url("../img/mountain-forest.jpg")
+    background-attachment fixed
+    background-repeat no-repeat 
+    background-size cover
+    background-position center top
+
+  &-container
+    /*Content*/
+    position relative
+    .oval
+      height 160px
+      width 224px
+      transform rotate(180deg)
+      opacity .18
+      position absolute
+      top -93px
+      left -40px
+      z-index -1
+
+    .innovation-content
+      width 600px
+      margin 0 auto
+      padding 50px 0 65px 0
+      /*Divider*/
+      .section-divider
+        background-color #0d74b9
+        width 100%
+        height 1px
+      &-info
+        display flex
+        justify-content center
+        align-items center
+        padding 45px 27px 45px 22px
+
+        .info
+          p
+            width 382px
+            font-size .96em
+            letter-spacing .45px
+            color #555555
+            line-height 1.32
+            margin 0
+            
+            
+          :first-child
+            margin-bottom 15px
+            max-width 375px
+        .innovation-content-image
+          width 141px
+          height 137px
+          display flex
+          justify-content center
+          align-items center
+          margin-left 50px
+          img
+            width 90px
+            height 75px
