#7 add contact route to navigation bar

--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -48,7 +48,7 @@
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./blog.html" class="">Contacto</a>
+        <a href="./contact.html" class="">Contacto</a>
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar-right">
