#10 add products route to navigation bar

--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -27,7 +27,7 @@
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./memberships.html" class="">Productos</a>
+        <a href="./products.html" class="">Productos</a>
       </li>
       {% if section == 'innovation' %}
         <li class="aguaviento-font-montserrat-light active">
